--- a/src/sidebar/style.scss
+++ b/src/sidebar/style.scss
@@ -17,7 +17,7 @@
 // Score-band tokens (P38 canonical)
 $citewp-score-green:  #00A32A;
 $citewp-score-yellow: #DBA617;
-$citewp-score-orange: #D63638;
+$citewp-score-orange: #E86612;
 $citewp-score-red:    #8C1B1B;
 
 // Text tokens (P38 paper-surface)
